# raytracer-from-scratch

./: CApp.cpp  CApp.h  CMakeLists.txt  main.cpp
dependencies/sdl2-arm/2.24.2/: INSTALL_RECEIPT.json
dependencies/sdl2-arm/2.24.2/lib/cmake/SDL2/: sdl2-config-version.cmake  sdl2-config.cmake
